# common_valid_strategy

./: .gitignore  README.md  main.py  pyproject.toml
results/: 0050.TW_20160105_to_20260105.csv  1216.TW_20160105_to_20260105.csv  1301.TW_20160105_to_20260105.csv  1303.TW_20160105_to_20260105.csv  1326.TW_20160105_to_20260105.csv  2002.TW_20160105_to_20260105.csv  2317.TW_20160104_to_20260102.csv  2317.TW_20160105_to_20260105.csv  2317.TW_20240102_to_20260102.csv  2324.TW_20160105_to_20260105.csv  2330.TW_20160104_to_20260102.csv  2330.TW_20160105_to_20260105.csv  2330.TW_20240102_to_20260102.csv  2379.TW_20160105_to_20260105.csv  2382.TW_20160105_to_20260105.csv  2412.TW_20160104_to_20260102.csv  2412.TW_20160105_to_20260105.csv  2412.TW_20240102_to_20260102.csv  2454.TW_20160104_to_20260102.csv  2454.TW_20160105_to_20260105.csv  2454.TW_20240102_to_20260102.csv  2881.TW_20160104_to_20260102.csv  2881.TW_20160105_to_20260105.csv  2881.TW_20240102_to_20260102.csv  2882.TW_20160104_to_20260102.csv  2882.TW_20160105_to_20260105.csv  2882.TW_20240102_to_20260102.csv  2884.TW_20160105_to_20260105.csv  2886.TW_20160105_to_20260105.csv  2891.TW_20160105_to_20260105.csv  2892.TW_20160105_to_20260105.csv  3008.TW_20160105_to_20260105.csv  3034.TW_20160105_to_20260105.csv  backtest_2317.TW_20260103_225223.csv  backtest_2317.TW_20260104_101149.csv  backtest_2317.TW_20260104_102640.csv  backtest_2330.TW_20260104_101149.csv  backtest_2412.TW_20260103_225223.csv  backtest_2412.TW_20260104_101149.csv  backtest_2412.TW_20260104_102640.csv  (+20 more)
src/: __init__.py  backtester.py  (+2 more)
